# cv-inventory

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml
catalogs/: catalog.npz  milo1-tcgplayer-mtg-2026-05.npz
docs/: API.md  ARCHITECTURE.md  OPERATIONS.md
docs/superpowers/plans/: 2026-05-19-phash-name-rerank.md
scripts/: eval_review.py  refresh-catalog.sh  smoke_test.sh
src/cv_inventory/: back_rejector.py  catalog_build.py  cli.py  config.py  image_fetch.py  pipeline.py  set_index.py
src/cv_inventory/server/: app.py  auth.py  schemas.py  state.py
src/cv_inventory/tcgplayer/: r2_sync.py  seller_csv.py  store.py
src/scan_and_identify/: catalog_build.py  cli.py  config.py  phash.py  pipeline.py  set_index.py
src/scan_and_identify/server/: app.py  schemas.py  state.py
src/scan_and_identify/tcgplayer/: r2_sync.py  seller_csv.py  store.py
tests/: conftest.py  test_back_rejector.py  test_bootstrap_algo_check.py  test_build_primitives.py  test_catalog_build.py  test_cli.py  test_confidence.py  test_config.py  test_image_fetch.py  test_merge_duplicates.py  test_phash.py  test_pipeline.py  test_price_formula.py  test_r2_sync.py  test_search.py  test_seller_csv.py  test_server_export.py  test_server_health.py  test_server_identify.py  test_server_identify_batch.py  test_server_products.py  test_server_sets.py  test_set_index.py  test_tcg_store.py
tests/fixtures/: synthetic.py
